--- a/day16/style.css
+++ b/day16/style.css
@@ -31,3 +31,37 @@ div.desc{
     display: inline-block;
     background-position: -500px 0;
 }
+
+a [href="https://shkolladigjitale.com/"]{
+    color: aquamarine;
+}
+
+p[class*="ds"]{
+    background: black;
+    color: aliceblue;
+    padding: 20px;
+}
+
+div[id~="ds"]{
+    background: lightblue;
+    color: aliceblue;
+    padding: 20px;
+    
+}
+
+img[title^="blue"]{
+    border: 2px solid blue;
+}
+h1[class |="heading" ] {
+background: lightcoral;
+color: darkgray;
+padding: 20px;
+}
+
+input[placeholder $="name"]{
+    border: 3px solid black;
+
+}
+input[ readonly]{
+    border: 2px solid brown;
+}
