--- a/day 20/style.css
+++ b/day 20/style.css
@@ -93,4 +93,87 @@ nav ul li.active {
 }
 .service img {
     width: 200px;
+} 
+
+#section-3{
+    background-color: rgb(91, 167, 218);
+    font-size: 24px;
+    font-weight: bold;
+    text-transform: uppercase;
+    color: aliceblue;
+}
+
+#contact-form{
+    max-width: 860px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.form-row{
+    display: flex;
+}
+
+input[type="text"], input[type="email"], textarea{
+    font-family: Arial, Helvetica, sans-serif;
+    color: aliceblue;
+    background-color: lightcyan;
+    border: none;
+    font-size: 19px;
+    margin: 16px;
+    border-radius: 6px;
+    padding-left: 26px;
+    
+}
+
+textarea{
+    height: 200px;
+    width: 1000px;
+    padding-top: 24px;
+    
+}
+
+input[type="submit"]{
+    background-color: lightpink;
+    border: none;
+    font-size: 18px;
+    text-transform: uppercase;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 5px;
+    margin-top: 50px;
+    margin-bottom: 10px;
+    
+}
+
+.big-button{
+    padding: 25px 85px;
+    color: aliceblue;
+}
+
+footer{
+    background-color: darkblue;
+}
+
+.footer-links{
+    max-width: 945px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+footer ul{
+    margin: 0px;
+    padding-top: 25px;
+    padding-bottom: 25px;
+    display: flex;
+}
+
+.footer-links ul li{
+    display: inline-block;
+    padding: 10px 20px 10px  20px;
+}
+
+.footer-links ul li a{
+    text-decoration: none;
+    color: aliceblue;
+    font-size: 24px;
 }
