--- a/day 20/style.css
+++ b/day 20/style.css
@@ -177,3 +177,60 @@ footer ul{
     color: aliceblue;
     font-size: 24px;
 }
+
+
+@media only screen and (max-width:800px){
+    header{
+        flex-direction: column;
+    }
+    nav ul li{
+        width: 100%;
+        text-align: center;
+    }
+    header img{
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .main-heading h1{
+        font-size: 20px;
+        width: 90%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .main-heading a{
+        font-size: 13px;
+        padding: 25px;
+    }
+    .main-heading{
+        margin-top: 0;
+    }
+    nav ul li  .active{
+        padding-right: 0;
+    }
+    nav ul{
+        padding-left: 0;
+    }
+    .service{
+        width: 100%;
+    }
+    .services-box{
+        flex-direction: column;
+    }
+    .title-box{
+        width: 90%;
+    }
+    .form-row{
+        flex-direction: column;
+    }
+    input[type="text"],input[type="email"], textarea{
+        width: 90%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    footer ul{
+        flex-direction: column;
+    }
+    footer ul li{
+        text-align: center;
+    }
+}
