--- a/personal project/about.css
+++ b/personal project/about.css
@@ -1,25 +1,4 @@
-*{
-    background: url(photo\ 8.jpg);
-    
-    
-}
 
-#p1{
-    color: rgb(131, 40, 40);
-    font-size: 60px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    text-align: center;
-    background-color: rgb(255, 255, 255);
-}
-
-
-
-
-nav ul li {
-    display:flex ;
-    padding: 6px 2px;
-}
-    
 nav ul li a {
     text-decoration: none;
     color: rgb(131, 39, 39);
@@ -30,6 +9,11 @@ nav ul li a {
     margin-left: 20px;
 }
 
+nav ul li {
+    display:flex ;
+    padding: 6px 2px;
+}
+
 header {
     background-color: rgba(128, 128, 128, 0.308);
     color: aliceblue;
@@ -37,7 +21,7 @@ header {
 }
 
 h1{
-    color: rgb(75, 12, 12);
+    color: darkred;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     text-align: center;
     font-size: 70px;
@@ -51,12 +35,9 @@ h2{
     font-size: 40px;
 }
 
-   
-
 h3 {
     color: darkred;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 17px;
 
 }
-
