--- a/personal project/contact.css
+++ b/personal project/contact.css
@@ -192,3 +192,139 @@ h2{
     box-shadow: 0 0 5px rgba(200, 16, 46, 0.3);
   }
   
+
+  .reservation-call {
+    font-size: 24px; 
+    font-weight: bold;
+    color: #ffffff; 
+    text-align: center; 
+    background-color: #831b1b; 
+    padding: 15px; 
+    border-radius: 8px; 
+    box-shadow: 0 4px 8px rgb(255, 255, 255);
+    margin: 20px 0; 
+    font-family: 'Arial', sans-serif; 
+    transition: background-color 0.3s ease, transform 0.3s ease; 
+}
+
+.reservation-call:hover {
+    transform: translateY(-5px); 
+}
+
+.reservation-call a {
+    color: #fff; 
+    text-decoration: none; 
+}
+
+.reservation-call a:hover {
+    text-decoration: underline; 
+}
+
+.contact-details {
+    background-color: #ecf0f1; 
+    border-radius: 8px; 
+    padding: 20px; 
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); 
+    max-width: 500px; 
+    margin: 20px auto;
+    font-family: 'Arial', sans-serif; 
+}
+
+.contact-details p {
+    font-size: 16px; 
+    line-height: 1.6; 
+    color: #631717; 
+    margin-bottom: 12px; 
+}
+
+.contact-details strong {
+    color: #2c3e50; 
+    font-weight: bold;
+}
+
+.contact-details p:last-child {
+    margin-bottom: 0; 
+}
+
+
+.contact-details p:hover {
+    background-color: #3498db; 
+    color: white; 
+    padding-left: 10px; 
+    transition: all 0.3s ease; 
+}
+
+p {
+    font-size: 18px;
+    line-height: 1.6;
+    color: #2c3e50;
+    font-family: 'Arial', sans-serif;
+    background-color: #f9f9f9;
+    border-left: 5px solid #3498db;
+    padding: 15px 20px;
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    margin: 20px 0;
+    transition: transform 0.3s ease, background-color 0.3s ease;
+}
+
+p:hover {
+    transform: translateX(5px);
+    background-color: #ecf0f1;
+}
+
+.contact-form {
+    max-width: 500px;
+    margin: 20px auto;
+    padding: 20px;
+    background-color: #ecf0f1;
+    border-radius: 8px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    font-family: 'Arial', sans-serif;
+}
+
+.contact-form h2 {
+    font-size: 24px;
+    text-align: center;
+    color: #2c3e50;
+    margin-bottom: 20px;
+}
+
+.contact-form label {
+    font-size: 16px;
+    color: #34495e;
+    display: block;
+    margin-bottom: 8px;
+}
+
+.contact-form input[type="text"] {
+    width: 100%;
+    padding: 12px;
+    font-size: 16px;
+    border: 2px solid #3498db;
+    border-radius: 5px;
+    background-color: #fff;
+    margin-bottom: 20px;
+    transition: border-color 0.3s ease;
+}
+
+.contact-form input[type="text"]:focus {
+    border-color: #f39c12;
+    outline: none;
+}
+
+.contact-form input[type="submit"] {
+    width: 100%;
+    padding: 12px;
+    font-size: 16px;
+    background-color: #3498db;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.contact-form input[type="submit"]:hover {
+    background-color: #2980b9;
+}
