--- a/day35/style.css
+++ b/day35/style.css
@@ -1,19 +1,37 @@
-.slide{width: 100%;}
-
-
-.prev, .next{
-    cursor: pointer;
-    position: absolute;
-    top: 50%;
-    padding: 20px;
+nav {
+  overflow: hidden;
+  background-color: #06206a;
+  position: relative;
+  max-width: 400px;
 }
 
 
-.next{
-    right:0;
+nav #myLinks {
+  display: none;
 }
 
 
-.prev:hover, .next:hover{
-    background-color: black;
+nav a, button {
+  color: white;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  display: block;
+}
+
+
+
+nav button.icon {
+  background: #06206a;
+  display: block;
+  position: absolute;
+  margin-top: 10px;
+  right: 10px;
+  top: 0;
+}
+
+
+nav a:hover {
+  background-color: #ddd;
+  color: black;
 }
